package at.bal;

public class GreenTrackerException extends Exception {
    public GreenTrackerException(String message) {
        super(message);
    }
}
