@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

class GreenTrackerException
{
+ GreenTrackerException(message: String)
}

Exception <|-- GreenTrackerException

interface Serializable
interface "Comparable<Verbrauch>" as Comparable
{
+ {abstract} compareTo(o: Verbrauch): int
}

Serializable <|.. Verbrauch
Comparable <|.. Verbrauch

abstract class Verbrauch
{
- taetigkeit: String
- dauerMin: double
+ Verbrauch()
+ Verbrauch(taetigkeit: String, dauerMin: double)
+ Verbrauch(lineParts: String[])
+ getTaetigkeit(): String
+ getDauerMin(): double
+ setTaetigkeit(taetigkeit: String): void
+ setDauerMin(dauerMin: double): void
+ {abstract} preis(): double
+ {abstract} ausstoss(): double
+ {abstract} co2Fussabdruck(): double
+ compareTo(other: Verbrauch): int
+ equals(o: Object): boolean
+ hashCode(): int
+ toString(): String
+ toCsvString(): String
}

class WasserVerbrauch extends Verbrauch
{
+ {static} vorgeschlageneTaetigkeiten: List<String>
- {static} EMISSIONSFAKTOR: double = 0.34
- aktuellerWasserPreis: double
- kubikmeternVerbrauchWasser: double
+ WasserVerbrauch(taetigkeit: String, dauer: double, aktuellerWasserPreis: double, kubikmeternVerbrauchWasser: double)
+ WasserVerbrauch(lineParts: String[])
+ getAktuellerWasserPreis(): double
+ setAktuellerWasserPreis(aktuellerWasserPreis: double): void
+ getKubikmeternVerbrauchWasser(): double
+ setKubikmeternVerbrauchWasser(kubikmeternVerbrauchWasser: double): void
+ preis(): double
+ ausstoss(): double
+ co2Fussabdruck(): double
+ equals(o: Object): boolean
+ hashCode(): int
+ toString(): String
+ toCsvString(): String
}

class GasVerbrauch extends Verbrauch
{
+ {static} vorgeschlageneTaetigkeiten: List<String>
- {static} EMISSIONSFAKTOR: double = 2.0
- aktuellerGasPreis: double
- kubikmeternVerbrauchGas: double
+ GasVerbrauch(taetigkeit: String, dauer: double, aktuellerGasPreis: double, kubikmeternVerbrauchGas: double)
+ GasVerbrauch(lineParts: String[])
+ getAktuellerGasPreis(): double
+ setAktuellerGasPreis(aktuellerGasPreis: double): void
+ getKubikmeternVerbrauchGas(): double
+ setKubikmeternVerbrauchGas(kubikmeternVerbrauchGas: double): void
+ preis(): double
+ ausstoss(): double
+ co2Fussabdruck(): double
+ equals(o: Object): boolean
+ hashCode(): int
+ toString(): String
+ toCsvString(): String
}

class StromVerbrauch extends Verbrauch
{
+ {static} vorgeschlageneTaetigkeiten: List<String>
- {static} EMISSIONSFAKTOR: double = 0.158
- aktuellerStromPreis: double
- kilowattProStunden: double
+ StromVerbrauch(taetigkeit: String, dauer: double, aktuellerStromPreis: double, kilowattProStunden: double)
+ StromVerbrauch(lineParts: String[])
+ getAktuellerStromPreis(): double
+ setAktuellerStromPreis(aktuellerStromPreis: double): void
+ getKilowattProStunden(): double
+ setKilowattProStunden(kilowattProStunden: double): void
+ preis(): double
+ ausstoss(): double
+ co2Fussabdruck(): double
+ equals(o: Object): boolean
+ hashCode(): int
+ toString(): String
+ toCsvString(): String
}

class DuschVerbrauch extends WasserVerbrauch
{
+ {static} vorgeschlageneTaetigkeiten: List<String>
- zugeordneterGasVerbrauch: GasVerbrauch
+ DuschVerbrauch(taetigkeit: String, dauer: double, aktuellerWasserPreis: double, kubikmeternVerbrauchWasser: double, zugeordneterGasVerbrauch: GasVerbrauch)
+ DuschVerbrauch(lineParts: String[])
+ getZugeordneterGasVerbrauch(): GasVerbrauch
+ setZugeordneterGasVerbrauch(zugeordneterGasVerbrauch: GasVerbrauch): void
+ preis(): double
+ ausstoss(): double
+ co2Fussabdruck(): double
+ equals(o: Object): boolean
+ hashCode(): int
+ toString(): String
+ toCsvString(): String
}

class GreenTracker
{
- name: String
~ verbrauche: List<Verbrauch>
- {static} REFERENZ_PRO_JAHR: double = 2700.0
+ GreenTracker(name: String)
+ getVerbrauch(index: int): Verbrauch
+ getVerbrauche(): List<Verbrauch>
+ getName(): String
+ setName(name: String): void
+ hinzufuegen(verbrauch: Verbrauch): boolean
+ entfernen(verbrauch: Verbrauch): boolean
+ entfernen(bezeichnung: String): int
+ berechneGesamtEmission(): double
+ berechneVerbrauchEmisson(type: String): double
+ berechneGesamtPreis(): double
+ berechneVerbrauchPreis(type: String): double
+ anzahlTaetigkeiten(taetigkeit: String): int
+ berechneGesamtCo2(): double
+ co2Bewertung(gesamtCo2: double): String
+ sortieren(): void
+ sortierenNachTaetigkeit(): void
+ save(): void
+ load(): void
+ writeVerbraucheToCsv(): void
+ readVerbraucheFromCsv(): void
+ toString(): String
+ toCsvString(): String
}

GreenTracker --> "*" Verbrauch
DuschVerbrauch --> GasVerbrauch

together {
class Verbrauch
class GreenTracker
}
GreenTracker -[hidden] Verbrauch

together {
class GreenTracker
class GreenTrackerException
}
GreenTrackerException -[hidden] GreenTracker

@enduml
